[package]
name = "silang-wasm"
version = "0.1.0"
authors = ["Kaoru Chisen <cordx56@cordx.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }

silang = { git = "https://github.com/cordx56/silang", branch = "master" }
once_cell = "1.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
